white space at bottom of homepage fix

--- a/src/App.css
+++ b/src/App.css
@@ -594,7 +594,7 @@ section.section2.active {
     display: block;
     margin-left: 2rem;
     margin-top: 2rem;
-    margin-bottom: 5rem;
+    margin-bottom: 4.5rem;
   }
 }
 
